k8s/backend-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: todo-backend-service
  namespace: todo-dev
  labels:
    app: todo-backend
    tier: backend
spec:
  selector:
    app: todo-backend
    
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
